--- a/Javascript/search-num.html
+++ b/Javascript/search-num.html
@@ -1,16 +1,14 @@
 <!-- // 1~100 사이의 숫자중 랜덤하게 컴퓨터가 하나 선택하면 사람이 숫자를 맞추기. -->
 <!-- // 크다>작자 -->
-<style>
-
-</style>
-
 <body>
+    <div style="text-align: center">
     <label style="font-size: 25;">1 ~ 100 사의 값</label>
     <br>
     <label >정답은 ? </label><input style="margin: 5;">
     <button>확인</button>
     <br>
-    <span style="font-size: 50;">두근두근</span>
+    <span style="font-size: 50;">????</span>
+    </div>
 </body>
 
 <!-- 태그 객체 생성 -->
@@ -24,6 +22,8 @@ let number;
 const onInput = (event)=>{
         number = event.target.value;
     };
+const time = Date.now();
+console.log(time);
 </script>
 
 <!-- 이벤트 등록 -->
@@ -39,5 +39,4 @@ const onInput = (event)=>{
         $span.textContent = '큰수를 입력하세요';
     }
     });
-
 </script>
